--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- CSS File-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Register</title>
+    <title>Profile</title>
     <!-- Font -->   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
