--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,7 @@
                         <div class="text_label">USERNAME</div>
                         <input class="prof-textbox" type="text" id="username" name="username" placeholder="Username" />
                         <div class="text_label">EMAIL</div>
-                        <input class="prof-textbox" type="text" id="email" name="email" placeholder="E-mail"/>
+                        <input class="prof-textbox" type="text" id="email" name="email" placeholder="E-mail" readonly/>
                         <div class="text_label">NAME</div>
                         <input class="prof-textbox" type="text" id="name" name="name" placeholder="Name"/>
                     </div>
