--- a/login.html
+++ b/login.html
@@ -50,52 +50,47 @@
 </body>
 
 <script type="module">
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
 
-// Your web app's Firebase configuration
-const firebaseConfig = {
-    apiKey: "AIzaSyA_OcUj00y_i23LVz_cdP_ebpwX5t4EmOI",
-    authDomain: "encryption-2dc13.firebaseapp.com",
-    projectId: "encryption-2dc13",
-    storageBucket: "encryption-2dc13.appspot.com",
-    messagingSenderId: "1091225008260",
-    appId: "1:1091225008260:web:c8d40136f0ebfaed136ad1"
-};
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyA_OcUj00y_i23LVz_cdP_ebpwX5t4EmOI",
+        authDomain: "encryption-2dc13.firebaseapp.com",
+        projectId: "encryption-2dc13",
+        storageBucket: "encryption-2dc13.appspot.com",
+        messagingSenderId: "1091225008260",
+        appId: "1:1091225008260:web:c8d40136f0ebfaed136ad1"
+    };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-// Function to handle user login
-const loginUser = (event) => {
-    event.preventDefault();
+    const loginUser = (event) => {
+        event.preventDefault();
 
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
 
-    signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-            const user = userCredential.user;
-            console.log("User logged in:", user);
-            window.location.href = 'profile.html'; // Redirect to profile page after successful login
-        })
-        .catch((error) => {
-            console.error("Error logging in:", error.message);
-            alert("Error: " + error.message);
-        });
-};
+        signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                const user = userCredential.user;
+                console.log("User logged in:", user);
+                window.location.href = 'profile.html';
+            })
+            .catch((error) => {
+                console.error("Error logging in:", error.message);
+                alert("Error: " + error.message);
+            });
+    };
 
-// Add event listener to the login button
-document.getElementById('login').addEventListener('click', loginUser);
+    document.getElementById('login').addEventListener('click', loginUser);
 
-// Check if the user is already logged in
-onAuthStateChanged(auth, (user) => {
-    if (user) {
-        window.location.href = 'profile.html'; // Redirect if user is already logged in
-    }
-});
+    onAuthStateChanged(auth, (user) => {
+        if (user) {
+            window.location.href = 'profile.html';
+        }
+    });
 </script>
 
 </html>
